authorization/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authorization
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authorization
  template:
    metadata:
      labels:
        app: authorization
    spec:
      containers:
      - name: authorization
        image: authorization
        ports:
        - name: http
          containerPort: 8080
