authorization/service.yml
apiVersion: v1
kind: Service
metadata:
  name: authorization
  labels:
    app: authorization
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: authorization
