authorization/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: authorization
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: platform.192.168.99.100.nip.io
    http:
      paths:
      - path: /validate
        backend:
          serviceName: authorization
          servicePort: http
